# goleki

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: SearchBar.jsx  SearchResult.jsx
